tests/baselines/reference/iterableArrayPattern29.errors.txt
iterableArrayPattern29.ts(2,21): error TS2345: Argument of type '[string, boolean]' is not assignable to parameter of type '[string, number]'.
  Type at position 1 in source is not compatible with type at position 1 in target.
    Type 'boolean' is not assignable to type 'number'.


==== iterableArrayPattern29.ts (1 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
    takeFirstTwoEntries(...new Map([["", true], ["hello", true]]));
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[string, boolean]' is not assignable to parameter of type '[string, number]'.
!!! error TS2345:   Type at position 1 in source is not compatible with type at position 1 in target.
!!! error TS2345:     Type 'boolean' is not assignable to type 'number'.